--- a/builder/Cargo.toml
+++ b/builder/Cargo.toml
@@ -18,4 +18,4 @@ trybuild = { version = "1.0.49", features = ["diff"] }
 [dependencies]
 proc-macro2 = "1.0.71"
 quote = "1.0.33"
-syn = "2.0.43"
+syn = {version = "2.0.43", features = ["extra-traits"]}
